--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "react": "^18",
     "react-dom": "^18",
     "react-scroll": "^1.9.0",
-    "tailwind-clip-path": "^1.0.0"
+    "tailwind-clip-path": "^1.0.0",
+    "three": "^0.172.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-scroll": "^1.8.10",
+    "@types/three": "^0.172.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
     "postcss": "^8",
