--- a/package.json
+++ b/package.json
@@ -1,31 +1,34 @@
 {
-  "name": "y",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "^14.2.23",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-scroll": "^1.9.0",
-    "tailwind-clip-path": "^1.0.0",
-    "three": "^0.172.0"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/react-scroll": "^1.8.10",
-    "@types/three": "^0.172.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.14",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.7.3"
-  }
+    "name": "y",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "format": "prettier --write ."
+    },
+    "dependencies": {
+        "next": "^14.2.23",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-scroll": "^1.9.0",
+        "tailwind-clip-path": "^1.0.0",
+        "three": "^0.172.0"
+    },
+    "devDependencies": {
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "@types/react-scroll": "^1.8.10",
+        "@types/three": "^0.172.0",
+        "eslint": "^8",
+        "eslint-config-next": "14.2.14",
+        "eslint-config-prettier": "^10.0.1",
+        "postcss": "^8",
+        "prettier": "^3.4.2",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5.7.3"
+    }
 }
