--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "format": "prettier --write ."
     },
     "dependencies": {
+        "@material-tailwind/react": "^2.1.10",
         "next": "^14.2.23",
         "react": "^18",
         "react-dom": "^18",
@@ -19,7 +20,7 @@
     },
     "devDependencies": {
         "@types/node": "^20",
-        "@types/react": "^18",
+        "@types/react": "18.2.42",
         "@types/react-dom": "^18",
         "@types/react-scroll": "^1.8.10",
         "@types/three": "^0.172.0",
