--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@material-tailwind/react": "^2.1.10",
+        "@tailwindcss/line-clamp": "^0.4.4",
         "next": "^14.2.23",
         "react": "^18",
         "react-dom": "^18",
