--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,9 @@
 {
-    "extends": ["next/core-web-vitals", "next/typescript", "prettier"]
+    "extends": [
+        "next/core-web-vitals",
+        "next/typescript",
+        "prettier",
+        "plugin:tailwindcss/recommended"
+    ],
+    "plugins": ["tailwindcss"]
 }
