--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
-        "format": "prettier --write ."
+        "fix-lint": "next lint --fix",
+        "format": "prettier --write .",
+        "all-fix": "npm run fix-lint && npm run format && npm run lint"
     },
     "dependencies": {
         "@material-tailwind/react": "^2.1.10",
@@ -25,9 +27,10 @@
         "@types/react-dom": "^18",
         "@types/react-scroll": "^1.8.10",
         "@types/three": "^0.172.0",
-        "eslint": "^8",
+        "eslint": "^8.57.1",
         "eslint-config-next": "14.2.14",
         "eslint-config-prettier": "^10.0.1",
+        "eslint-plugin-tailwindcss": "^3.18.0",
         "postcss": "^8",
         "prettier": "^3.4.2",
         "tailwindcss": "^3.4.1",
