add: npm run build & devを1コマンドで実行できるようにした

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "scripts": {
         "dev": "next dev",
         "build": "next build",
+        "build-dev": "npm run build && npm run dev",
         "start": "next start",
         "lint": "next lint",
         "fix-lint": "next lint --fix",
