--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     },
     "dependencies": {
         "@material-tailwind/react": "^2.1.10",
+        "@reduxjs/toolkit": "^2.6.0",
         "@tailwindcss/line-clamp": "^0.4.4",
         "next": "^14.2.23",
         "react": "^18",
         "react-dom": "^18",
+        "react-redux": "^9.2.0",
         "react-scroll": "^1.9.0",
         "tailwind-clip-path": "^1.0.0",
         "three": "^0.172.0"
